tests/ui/attr-invariant/no-struct-error/expected
error: Cannot define invariant for `MyEnum`
   |
9  | #[kani::invariant(true)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `#[kani::invariant(..)]` is only available for structs
